--- a/index.html
+++ b/index.html
@@ -1,56 +1,71 @@
 <!DOCTYPE html>
 <html>
-  <head>
-
-    <title>repl.it</title>
-
-    <style>
-      .navbar{
-        background-color: blue;
-        width: 100%;
-        height: 64px;
-      }
-
-      .navbar a, .morelinks {
-        color: white;
-        font-size: 24px;
-        text-decoration: none;
-        padding:16px;
-        float:left;
-      }
-
-      .navbar a:hover, .morelinks:hover{
-        background-color: darkBlue;
-        opacity: 0.5;
-      }
-
-      .morelinks:hover .dropdown-content{
-        display:block;
-      }
-
-      .dropdown-content{
-        position: absolute;
-      }
-
-
-
-    </style>
-
-  </head>
-  <body>
-    <div class="navbar">
-      <a href="https://www.yahoo.com">Yahoo</a>
-      <a href="https://www.google.com">Google</a>
-      <a href="https://www.yahoo.com">Yahoo</a>
-      <div class="dropdown">
-        <div class="morelinks">More Links</div>
-        <div class="dropdown-content">
-          <a href="https://www.awseducate.com">AWS Educate</a>
-          <a href="https://www.collegeboard.org">College Board</a>
+    <head>
+        <title>repl.it</title>
+        <style>
+            .navbar
+            {
+background-image: linear-gradient(blue, darkBlue);
+                overflow: hidden;
+            }
+            .navbar a
+            {
+                color: white;
+                font-size: 24px;
+                text-decoration: none;
+                padding: 16px;
+                float: left;
+            }
+            .morelinks
+            {
+                color: white;
+                font-size: 24px;
+                text-decoration: none;
+                padding: 16px;
+            }
+            .navbar a:hover, .morelinks:hover
+            {
+                background-color: darkBlue;
+                opacity: 0.5;
+            }
+            .dropdown:hover .dropdown-content
+            {
+                display: block;
+            }
+            .dropdown-content
+            {
+                position: absolute;
+                z-index: 1;
+                display: none;
+  background-image: linear-gradient(red, yellow);
+            }
+            .dropdown
+            {
+                background-color: blue;
+                color: white;
+                float: left;
+                text-decoration: none;
+                font-size: 24px;
+            }
+            .dropdown-content a
+            {
+                float: none;
+                display: block;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="navbar">
+            <a href="https://www.yahoo.com">Yahoo</a>
+            <a href="https://www.google.com">Google</a>
+            <a href="https://www.yahoo.com">Yahoo</a>
+            <div class="dropdown">
+                <div class="morelinks">More Links</div>
+                <div class="dropdown-content">
+                    <a href="https://www.awseducate.com">AWS Educate</a>
+                    <a href="https://www.collegeboard.org">College Board</a>
+                </div>
+            </div>  
         </div>
-      </div>  
-
-    </div>
-
-  </body>
+    </body>
 </html>
