--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <style>
             .navbar
             {
-background-image: linear-gradient(blue, darkBlue);
+                background-image: linear-gradient(blue, darkBlue);
                 overflow: hidden;
             }
             .navbar a
@@ -25,7 +25,7 @@ background-image: linear-gradient(blue, darkBlue);
             }
             .navbar a:hover, .morelinks:hover
             {
-                background-color: darkBlue;
+                background-image: linear-gradient(darkBlue, blue);
                 opacity: 0.5;
             }
             .dropdown:hover .dropdown-content
@@ -37,11 +37,11 @@ background-image: linear-gradient(blue, darkBlue);
                 position: absolute;
                 z-index: 1;
                 display: none;
-  background-image: linear-gradient(red, yellow);
+                background-color: darkblue;
             }
             .dropdown
             {
-                background-color: blue;
+                background-image: linear-gradient(blue, darkBlue);
                 color: white;
                 float: left;
                 text-decoration: none;
