--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                 list-style: none;
                 padding: 0;
                 display: none;
+                position: absolute;
+                z-index: 1;
+                background-color: blue;
             }
             .dropdown-content li
             {
