--- a/resume.html
+++ b/resume.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" type"text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <ul class=navbar>
-            <li class="active"><a href="/index.html">Home</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class=active><a href="resume.html">Resume</a></li>
             <li class=dropdown>
                 <div>Projects</div>
                 <ul class=dropdown-content>
@@ -18,7 +18,7 @@
             </li>
         </ul>
         
-        <h1>Home</h1>
+        <h1>Resume</h1>
         <blockquote>
             <p>
                 <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor sed viverra ipsum nunc aliquet bibendum enim. In massa tempor nec feugiat. Nunc aliquet bibendum enim facilisis gravida. Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper. Amet luctus venenatis lectus magna fringilla. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. Egestas egestas fringilla phasellus faucibus scelerisque eleifend. Sagittis orci a scelerisque purus semper eget duis. Nulla pharetra diam sit amet nisl suscipit. Sed adipiscing diam donec adipiscing tristique risus nec feugiat in. Fusce ut placerat orci nulla. Pharetra vel turpis nunc eget lorem dolor. Tristique senectus et netus et malesuada.</i>
