--- a/project3.html
+++ b/project3.html
@@ -7,6 +7,7 @@
     <body>
         <ul class=navbar>
             <li><a href="index.html">Home</a></li>
+            <li><a href="aboutMe.html">About Me</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li class=dropdown>
                 <div class=active>Projects</div>
