Added name on homepage and moved homepage styling to separate stylesheet

--- a/index.html
+++ b/index.html
@@ -3,20 +3,6 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" type"text/css" href="style.css">
-        <style>
-            table, tr, td
-            {
-                background-color: lightGray;
-                padding: 8px;
-                border: 2px solid black;
-                border-collapse: collapse;
-                margin: 16px;
-            }
-            body
-            {
-                margin: 0;
-            }
-        </style>
     </head>
     <body>
         <ul class=navbar>
@@ -33,6 +19,7 @@
             </li>
         </ul>
 
+        <h1>Jason Ward</h1>
         <table>
             <tr>
                 <td>Image 1</td>
