--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,13 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+<style>
+    h3
+    {
+        line-height:0.50
+    }
+</style>
+
     </head>
     <body>
         <ul class=navbar>
@@ -20,8 +27,31 @@
         </ul>
 
         <h1>Resume</h1>
-        <h3>Career Goal or Objective</h3>
-        <h4 style="margin:none">My goal</h4>
+
+        <blockquote style="padding:0; margin:0">
+            <h3 style:"line-height:0.5">Career Goal or Objective</h3>
+            <p>Write a single sentence that clearly summarizes your career goal or objective.</p>
+            <h3>Education</h3>
+            <p>List our high school name and city. Put the years of attendance and list relevant coursework.
+               List your colleges of interest. Include the college name and program of study.</p>
+            <h3>Work/Volunteer Experience</h3>
+            <p>List in reverse chronological order any work experience. Include your job title, dates of
+employment, and responsibilities.
+You may omit any experience that you do not think is relevant.</p>
+<h3>Skills (Languages/Certifications)</h3>
+These items can be covered in separate sections as well.
+List any specific skills that are relevant to your career objective.
+If you are proficient in another language, include the language and your level of proficiency.
+If listing a certification, include the specific certificate name and the date in which you earned
+the certificate.
+You may also include the following sections.
+Academic Highlights & Awards
+You can include things like honor roll, AP classes, academic clubs, and special awards. Include
+dates of any awards or honors.
+Extracurricular Activities (Hobbies/Interests)
+You can include things like sports, clubs, activities that might demonstrate leadership.
+You can also include relates hobbies and interests.
+        </blockquote>
 
     </body>
 </html>
