added to Resume and About Me

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -7,8 +7,8 @@
     <body>
         <ul class=navbar>
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="aboutMe.html">About Me</a></li>
             <li><a href="resume.html">Resume</a></li>
+            <li><a href="contactMe.html">Contact Me</a></li>
             <li class=dropdown>
                 <div>Projects</div>
                 <ul class=dropdown-content>
@@ -22,13 +22,20 @@
         <h1>About Me</h1>
         <blockquote>
             <p>
-                Paragraph 1
+                My career goal is to have a successful career in an industry I have
+                not yet chosen. I want to enjoy my job. I will go to a four-year
+                university if I get in to one. I want to go to college because it
+                is expected of California students.
             </p>
             <p>
                 Paragraph 2
             </p>
             <p>
                 Paragraph 3
+            </p>
+            <p>
+                Thank you for reading my About Me page. Please explore the rest of
+                my site.
             </p>
         </blockquote>
 
