--- a/resume.html
+++ b/resume.html
@@ -10,9 +10,9 @@
         margin-bottom:0;
         padding-bottom:0;
     }
-    padding
+    p
     {
-        margin-top:0;
+        margin-top:4px;
         padding-top:0
     }
 </style>
@@ -37,21 +37,13 @@
 
         <blockquote style="padding:0; margin:0">
             <h3>Career Goal or Objective</h3>
-            <p>Write a single sentence that clearly summarizes your career goal or objective.</p>
+            <p>I want to have a successful career in a job I enjoy.</p>
             <h3>Education</h3>
-            <p>List our high school name and city. Put the years of attendance and list relevant coursework.
-               List your colleges of interest. Include the college name and program of study.</p>
+            <p>Palm Desert High School, Palm Desert, California<br>AP Computer Science Principles</p>
             <h3>Work/Volunteer Experience</h3>
-            <p>List in reverse chronological order any work experience. Include your job title, dates of
-            employment, and responsibilities.
-            You may omit any experience that you do not think is relevant.</p>
+            <p>Because I am a student, I have no formal work experience.</p>
             <h3>Skills (Languages/Certifications)</h3>
-            <p>These items can be covered in separate sections as well.
-            List any specific skills that are relevant to your career objective.
-            If you are proficient in another language, include the language and your level of proficiency.
-            If listing a certification, include the specific certificate name and the date in which you earned
-            the certificate.</p>
-            <p>You may also include the following sections.</p>
+            <p>I am fluent in English and know some Spanish. I also can code in C, and some HTML and CSS..</p>
             <h3>Academic Highlights & Awards</h3>
             <p>You can include things like honor roll, AP classes, academic clubs, and special awards. Include
             dates of any awards or honors.</p>
