added to Resume and About Me

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <li class="active"><a href="/index.html">Home</a></li>
             <li><a href="aboutMe.html">About Me</a></li>
             <li><a href="resume.html">Resume</a></li>
+            <li><a href="contactMe.html">Contact Me</a></li>
             <li class=dropdown>
                 <div>Projects</div>
                 <ul class=dropdown-content>
