--- a/project1.html
+++ b/project1.html
@@ -9,6 +9,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutMe.html">About Me</a></li>
             <li><a href="resume.html">Resume</a></li>
+            <li><a href="contactMe.html">Contact Me</a></li>
             <li class=dropdown>
                 <div class=active>Projects</div>
                 <ul class=dropdown-content>
@@ -18,7 +19,7 @@
                 </ul>
             </li>
         </ul>
-        
+
         <h1>Project 1</h1>
         <blockquote>
             <p>
@@ -28,6 +29,6 @@
                 <i>Etiam tempor orci eu lobortis elementum nibh tellus molestie. Neque egestas congue quisque egestas. Egestas integer eget aliquet nibh praesent tristique. Vulputate mi sit amet mauris. Sodales neque sodales ut etiam sit. Dignissim suspendisse in est ante in. Volutpat commodo sed egestas egestas. Felis donec et odio pellentesque diam. Pharetra vel turpis nunc eget lorem dolor sed viverra. Porta nibh venenatis cras sed felis eget. Aliquam ultrices sagittis orci a. Dignissim diam quis enim lobortis. Aliquet porttitor lacus luctus accumsan. Dignissim convallis aenean et tortor at risus viverra adipiscing at.</i>
             </p>
         </blockquote>
-        
+
     </body>
 </html>
