--- a/resume.html
+++ b/resume.html
@@ -23,6 +23,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutMe.html">About Me</a></li>
             <li class=active><a href="resume.html">Resume</a></li>
+            <li><a href="contactMe.html">Contact Me</a></li>
             <li class=dropdown>
                 <div>Projects</div>
                 <ul class=dropdown-content>
@@ -35,7 +36,7 @@
 
         <h1>Resume</h1>
 
-        <blockquote style="padding:0; margin:0">
+        <blockquote>
             <h3>Career Goal or Objective</h3>
             <p>I want to have a successful career in a job I enjoy.</p>
             <h3>Education</h3>
