--- a/aboutMe.html
+++ b/aboutMe.html
@@ -7,6 +7,7 @@
     <body>
         <ul class=navbar>
             <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="aboutMe.html">About Me</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contactMe.html">Contact Me</a></li>
             <li class=dropdown>
