Finished Contact Me

--- a/resume.html
+++ b/resume.html
@@ -44,10 +44,9 @@
             <h3>Work/Volunteer Experience</h3>
             <p>Because I am a student, I have no formal work experience.</p>
             <h3>Skills (Languages/Certifications)</h3>
-            <p>I am fluent in English and know some Spanish. I also can code in C, and some HTML and CSS..</p>
+            <p>I am fluent in English and know some Spanish. I also can code in C, and some HTML and CSS.</p>
             <h3>Academic Highlights & Awards</h3>
-            <p>You can include things like honor roll, AP classes, academic clubs, and special awards. Include
-            dates of any awards or honors.</p>
+            <p>I have been Honor Roll every year.<br>I am taking AP and Honors classes, incliuding AP Computer Science Principles.</p>
             <h3>Extracurricular Activities (Hobbies/Interests)</h3>
             <p>You can include things like sports, clubs, activities that might demonstrate leadership.
             You can also include relates hobbies and interests.</p>
