Added to Home and About Me

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -29,10 +29,12 @@
                 is expected of California students.
             </p>
             <p>
-                Paragraph 2
+                I am punctual, resourseful and responsible. These strengths will
+                 help me in my career.
             </p>
             <p>
-                Paragraph 3
+                I have learned about myself from my experiences. I will work until
+                I acheive what needs to be done. I am a fast learner.
             </p>
             <p>
                 Thank you for reading my About Me page. Please explore the rest of
