--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <h1>Jason Ward</h1>
         <table>
             <tr>
-                <td>Image 1</td>
-                <td>Image 2</td>
-                <td>Image 3</td>
+                <td><img src="pic_trulli.jpg" alt="Italian Trulli"></td>
+                <td><img src="pic_trulli.jpg" alt="Italian Trulli"></td>
+                <td><img src="pic_trulli.jpg" alt="Italian Trulli"></td>
             </tr>
             <tr>
                 <td>Image 1 Description</td>
