--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <h1>Jason Ward</h1>
         <table>
             <tr>
-                <td><img src="pic_trulli.jpg" alt="Italian Trulli"></td>
-                <td><img src="pic_trulli.jpg" alt="Italian Trulli"></td>
-                <td><img src="pic_trulli.jpg" alt="Italian Trulli"></td>
+                <td><img src="pic_trulli.jpg" alt="Me"></td>
+                <td><img src="pic_trulli.jpg" alt="Also me"></td>
+                <td><img src="pic_trulli.jpg" alt="The last picture"></td>
             </tr>
             <tr>
-                <td>Image 1 Description</td>
-                <td>Image 2 Description</td>
-                <td>Image 3 Description</td>
+                <td>A photo of me.</td>
+                <td>Another photo pf me.</td>
+                <td>The third picture of me</td>
             </tr>
         </table>
 
