--- a/aboutMe.html
+++ b/aboutMe.html
@@ -21,26 +21,34 @@
         </ul>
 
         <h1>About Me</h1>
-        <blockquote>
-            <p>
-                My career goal is to have a successful career in an industry I have
-                not yet chosen. I want to enjoy my job. I will go to a four-year
-                university if I get in to one. I want to go to college because it
-                is expected of California students.
-            </p>
-            <p>
-                I am punctual, resourseful and responsible. These strengths will
-                 help me in my career.
-            </p>
-            <p>
-                I have learned about myself from my experiences. I will work until
-                I acheive what needs to be done. I am a fast learner.
-            </p>
-            <p>
-                Thank you for reading my About Me page. Please explore the rest of
-                my site.
-            </p>
-        </blockquote>
+        <table>
+            <tr>
+                <td style="vertical-align:top"><img src="pic_trulli.jpg" alt="Me"></td>
+                <td>
+                    <blockquote>
+                        <p>
+                            My career goal is to have a successful career in an industry I have
+                            not yet chosen. I want to enjoy my job. I will go to a four-year
+                            university if I get in to one. I want to go to college because it
+                            is expected of California students.
+                        </p>
+                        <p>
+                            I am punctual, resourseful and responsible. These strengths will
+                            help me in my career.
+                        </p>
+                        <p>
+                            I have learned about myself from my experiences. I will work until
+                            I acheive what needs to be done. I am a fast learner.
+                        </p>
+                        <p>
+                            Thank you for reading my About Me page. Please explore the rest of
+                            my site.
+                        </p>
+                    </blockquote>
+                </td>
+            </tr>
+        </table>
+
 
     </body>
 </html>
