fixed some typos

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <h1>Jason Ward</h1>
         <table>
             <tr>
-                <td><img src="pic_trulli.jpg" alt="Me"></td>
-                <td><img src="pic_trulli.jpg" alt="Also me"></td>
-                <td><img src="pic_trulli.jpg" alt="The last picture"></td>
+                <td><img src="images/me.jpg" alt="Me"></td>
+                <td><img src="images/myCode.jpg" alt="My Code"></td>
+                <td><img src="inages/myDogs.jpg" alt="Mis Perros"></td>
             </tr>
             <tr>
                 <td>A photo of me.</td>
-                <td>Another photo pf me.</td>
-                <td>The third picture of me</td>
+                <td>A screenshot of my code with me in the background.</td>
+                <td>My dogs.</td>
             </tr>
         </table>
 
