--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,7 @@
             <h3>Skills (Languages/Certifications)</h3>
             <p>I am fluent in English and know some Spanish. I also can code in C, and some HTML and CSS.</p>
             <h3>Academic Highlights & Awards</h3>
-            <p>I have been Honor Roll every year.<br>I am taking AP and Honors classes, incliuding AP Computer Science Principles.</p>
+            <p>I have been <i>Summa Cum Laude</i> with a 4.0 GPA or higher every applicable year every year.<br>I am taking AP and Honors classes, incliuding AP Computer Science Principles.</p>
         </blockquote>
 
     </body>
