added picture with Landfried

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <h1>Jason Ward</h1>
         <table>
             <tr>
-                <td><img src="images/me.jpg" alt="Me"></td>
+                <td><img src="images/landfriedAndI.jpg" alt="Me" class=rotateImg180></td>
                 <td><img src="images/myCode.jpg" alt="My Code"></td>
                 <td><img src="inages/myDogs.jpg" alt="Mis Perros"></td>
             </tr>
             <tr>
-                <td>A photo of me.</td>
+                <td>Mr. Landfried, the acclaimed developer of the PDHS AllIn app, with me, his humble student.</td>
                 <td>A screenshot of my code with me in the background.</td>
                 <td>My dogs.</td>
             </tr>
