added images and newTab

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <table>
             <tr>
                 <td><img src="images/landfriedAndI.jpg" alt="Me" class=rotateImg180></td>
-                <td><img src="images/myCode.jpg" alt="My Code"></td>
-                <td><img src="inages/myDogs.jpg" alt="Mis Perros"></td>
+                <td><img src="images/[3]myCode.jpg" alt="My Code"></td>
+                <td><img src="images/myDogs.jpg" alt="Mis Perros"></td>
             </tr>
             <tr>
-                <td>Mr. Landfried, the acclaimed developer of the PDHS AllIn app, with me, his humble student.</td>
-                <td>A screenshot of my code with me in the background.</td>
+                <td>Mr. Landfried, the acclaimed developer of the PDHS Allin app, with me, his humble student.</td>
+                <td>A screenshot of my code.</td>
                 <td>My dogs.</td>
             </tr>
         </table>
