added to resume

--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
             <h3>Education</h3>
             <p>Palm Desert High School, Palm Desert, California<br>AP Computer Science Principles</p>
             <h3>Work/Volunteer Experience</h3>
-            <p>Because I am a student, I have no formal work experience.</p>
+            <p>I single-handedly managed the successful upgrade and deployment of new environmental illumination system at both by home and somewhere I volenteered with while remaining under-budget and with zero safety incidents.</p>
             <h3>Skills (Languages/Certifications)</h3>
             <p>I am fluent in English and know some Spanish. I also can code in C, and some HTML and CSS.</p>
             <h3>Academic Highlights & Awards</h3>
