formatting:changed resume to bulleted lists

--- a/resume.html
+++ b/resume.html
@@ -36,18 +36,30 @@
 
         <h1>Resume</h1>
 
-        <blockquote>
-            <h3>Career Goal or Objective</h3>
-            <p>I want to have a successful career in a job I enjoy.</p>
-            <h3>Education</h3>
-            <p>Palm Desert High School, Palm Desert, California<br>AP Computer Science Principles</p>
-            <h3>Work/Volunteer Experience</h3>
-            <p>I single-handedly managed the successful upgrade and deployment of new environmental illumination system at both by home and somewhere I volenteered with while remaining under-budget and with zero safety incidents.</p>
-            <h3>Skills (Languages/Certifications)</h3>
-            <p>I am fluent in English and know some Spanish. I also can code in C, and some HTML and CSS.</p>
-            <h3>Academic Highlights & Awards</h3>
-            <p>I have been <i>Summa Cum Laude</i> with a 4.0 GPA or higher every applicable year every year.<br>I am taking AP and Honors classes, incliuding AP Computer Science Principles.</p>
-        </blockquote>
+        <ul>
+            <li><b>Career Goal or Objective</b></li>
+                <ul>
+                    <li>I want to have a successful career in a job I enjoy.</li>
+                </ul><br>
+            <li><b>Education</b></li>
+                <ul>
+                    <li>Palm Desert High School, Palm Desert, California</li>
+                    <li>AP Computer Science Principles</li>
+                </ul><br>
+            <li><b>Work/Volunteer Experience</b></li>
+                <ul>
+                    <li></li>
+                </ul><br>
+            <li><b>Skills (Languages/Certifications)</b></li>
+                <ul>
+                    <li>I am fluent in English and know some Spanish. I also can code in C, and some HTML and CSS.</li>
+                </ul><br>
+            <li><b>Academic Highlights & Awards</b></li>
+                <ul>
+                    <li>I have been <i>Summa Cum Laude</i> with a 4.0 GPA or higher every applicable year every year.</li>
+                    <li>I am taking AP and Honors classes, incliuding AP Computer Science Principles.</li>
+                </ul>
+        </ul>
 
     </body>
 </html>
