slight edits to homepage plus alerts

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         </ul>
 
         <h1>Jason Ward</h1>
-        <table>
+        <h6>*content commented out*</h6>
+        <!--<table>
             <tr>
                 <td><img src="images/landfriedAndI.jpg" alt="Me" class=rotateImg180></td>
                 <td><img src="images/[3]myCode.jpg" alt="My Code"></td>
@@ -32,7 +33,31 @@
                 <td>A screenshot of my code.</td>
                 <td>My dogs.</td>
             </tr>
-        </table>
+        </table>-->
+
+        <script>
+            var num;
+            var radius1;
+            var radius2;
+
+            var num = prompt("Please enter a radius");
+            radius1 = num;
+            radius2 = num + 1;
+            radius1 = radius1 * radius1;
+            alert(Math.PI * radius1);
+            radius2 = radius2 * radius2;
+            alert(Math.PI * radius2);
+
+
+            //take user's value as input
+            //calculate the area of a circle;
+            //alert the result
+
+            //increment the radius by one
+            //calculate the new area of the circle
+            //alert the result
+
+        </script>
 
         <div style"width:100; background-color:black"></div>
     </body>
