Changed Project 1 to Text Adventure and added divs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li class=dropdown>
                 <div>Projects</div>
                 <ul class=dropdown-content>
-                    <li><a href="project1.html">Project 1</a></li>
+                    <li><a href="textAdventure.html">Text Adventure</a></li>
                     <li><a href="project2.html">Project 2</a></li>
                     <li><a href="project3.html">Project 3</a></li>
                 </ul>
@@ -29,7 +29,7 @@
                 <td><img src="images/myDogs.jpg" alt="Mis Perros"></td>
             </tr>
             <tr>
-                <td>Mr. Landfried, the acclaimed developer of the PDHS Allin app, with me, his humble student.</td>
+                <td>Mr. Landfried and I.</td>
                 <td>A screenshot of my code.</td>
                 <td>My dogs.</td>
             </tr>
