--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
             <li class=dropdown>
                 <div>Projects</div>
                 <ul class=dropdown-content>
-                    <li><a href="project1.html">Project 1</a></li>
+                    <li><a href="textAdventure.html">Text Adventure</a></li>
                     <li><a href="project2.html">Project 2</a></li>
                     <li><a href="project3.html">Project 3</a></li>
                 </ul>
