--- a/Portfolio/textAdventure.html
+++ b/Portfolio/textAdventure.html
@@ -12,7 +12,7 @@
                 bottom:0px;
                 left:0px;
                 right:0px;
-                background-color:green;
+                background-color:black;
             }
             #leftPane
             {
@@ -22,14 +22,12 @@
                 display:flex;
                 align-items:center;
                 justify-content:center;
-                background-color:red;
             }
             #rightPane
             {
                 width:44%;
                 height:100%;
                 float:left;
-                background-color:blue;
             }
             #storytext
             {
@@ -38,10 +36,9 @@
                 bottom:50px;
                 left:56%;
                 right:0px;
-                display:flex;
-                align-items:center;
+                /*display:flex;   //comment/uncomment for collumns instead of paragraphs
+                align-items:center;*/
                 justify-content:center;
-                background-color:pink;
             }
             #choices
             {
@@ -53,18 +50,24 @@
                 display:flex;
                 align-items:center;
                 justify-content:center;
-                background-color:yellow;
+                background-color:black;
             }
             #b1, #b2, #b3, #b4
             {
                 display:inline-block;
-                background-color:brown;//purple-orange
-                color:white;
+                //background-color:#000033;//purple-orange
+                //background:linear-gradient(white,black);
+                background: radial-gradient(rgba(0,0,224,1), rgba(0,0,0,0.1));
+                color:blue;
                 font-size:16px;
                 padding:10px;
                 margin:5px;
                 border-radius:8px;
                 text-decoration:none;
+            }
+            p
+            {
+                color:blue;
             }
         </style>
 
@@ -87,18 +90,90 @@
 
         <div id="container">
             <div id="leftPane">
+                <img id="storyimg" src="images/witch.jpg">
             </div>
             <div id="rightPane">
                 <div id="storytext">
+                    <p id="ptext1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor sed viverra ipsum nunc aliquet bibendum enim. In massa tempor nec feugiat. Nunc aliquet bibendum enim facilisis gravida. Tristique senectus et netus et malesuada.</p>
+                    <p id="ptext2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor sed viverra ipsum nunc aliquet bibendum enim. In massa tempor nec feugiat. Nunc aliquet bibendum enim facilisis gravida. Tristique senectus et netus et malesuada.</p>
+                    <p id="ptext3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor sed viverra ipsum nunc aliquet bibendum enim. In massa tempor nec feugiat. Nunc aliquet bibendum enim facilisis gravida. Tristique senectus et netus et malesuada.</p>
+                    <p id="ptext4"></p>
                 </div>
                 <div id="choices">
-                    <a id="b1" href="#">Choice 1</a>
-                    <a id="b2" href="#">Choice 2</a>
-                    <a id="b3" href="#">Choice 3</a>
-                    <a id="b4" href="#">Choice 4</a>
+                    <a id="b1" onclick="bclick(1)" href="#">Choice 1</a>
+                    <a id="b2" onclick="bclick(2)" href="#">Choice 2</a>
+                    <a id="b3" onclick="bclick(3)" href="#">Choice 3</a>
+                    <a id="b4" onclick="bclick(4)" href="#">Choice 4</a>
                 </div>
             </div>
         </div>
+
+        <script>
+            var pic = document.getElementById("storyimg");
+            var ptext1 = document.getElementById("ptext1");
+            var ptext2 = document.getElementById("ptext2");
+            var ptext3 = document.getElementById("ptext3");
+            var ptext4 = document.getElementById("ptext4");
+            var b1 = document.getElementById("b1");
+            var b2 = document.getElementById("b2");
+            var b3 = document.getElementById("b3");
+            var b4 = document.getElementById("b4");
+            var state = "intro";
+
+            intro();
+
+            function intro()
+            {
+                pic.src = "images/woods.jpg";
+                ptext1.innerHTML = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor sed viverra ipsum nunc aliquet bibendum enim. Fusce ut placerat orci nulla. Pharetra vel turpis nunc eget lorem dolor. Tristique senectus et netus et malesuada.");
+                ptext2.innerHTML = "";
+                ptext3.innerHTML = "";
+                ptext4.innerHTML = "";
+                b1.innerHTML = "Yes";
+                b2.innerHTML = "No";
+                b3.innerHTML = "";
+                b4.innerHTML = "";
+                b1.style.display = "block";
+                b2.style.display = "block";
+                b3.style.display = "none";
+                b4.style.display = "none";
+                state = "meetWitch";
+            }
+            function meetWitch();
+            {
+                pic.src = "images/witch.jpg";
+                ptext1.innerHTML = "Hello, I have a spell to put on you.";
+                ptext2.innerHTML = "What would you like to do?";
+                ptext3.innerHTML = "";
+                ptext4.innerHTML = "";
+                b1.innerHTML = "Attack";
+                b2.innerHTML = "Run";
+                b3.innerHTML = "Stay";
+                b4.innerHTML = "";
+                b1.style.display = "block";
+                b2.style.display = "block";
+                b3.style.display = "block";
+                b4.style.display = "none";
+                state = "meetWitch";
+            }
+
+            //state machine
+            function bclick(button)
+            {
+                if(state == "intro")
+                {
+                    if(button == 1)
+                    {
+                        meetWitch();
+                    }
+                    else if(button == 2)
+                    {
+                        //send them somewhere else
+                    }
+                }
+                return: false;
+            }
+        </script>
 
     </body>
 </html>
